--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="ins_orange">Insulin Icon</string>
     <string name="settings_button">Settings Icon</string>
     <string name="wt_yellow_green">Weight Icon</string>
+    <string name="weekly_glucose">Weekly Glucose</string>
     
 </resources>
