WIP changing fragments from bottom navbar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="title_left">LeftFragment Title</string>
     <string name="title_right">RightFragment Title</string>
     <string name="username">Sterfan Peterpson</string>
-    
+    <string name="bp_left_title">Blood Pressure Log</string>
+
 </resources>
